Added caching to the groups.